syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "msg.proto";
option go_package = "github.com/Quaestiox/JustTalk_backend/pb";

message CreateMsgRequest{
  int64 receiver_id = 1;
  string content = 2;
}

message CreateMsgResponse{
  Msg message = 1;
}


message ReceiveMsgRequest{
  int64 sender_id = 1;
}

message ReceiveMsgResponse{
  repeated Msg message = 1;
}

message GetMsgRequest{
  int64 id = 1;
}

message GetMsgResponse{
  Msg message = 1;
}

